Restrict cross body bag to multi
Everything else will get the standard color list

--- a/_data/products.yml
+++ b/_data/products.yml
@@ -2,6 +2,7 @@
   paypal-id: 27MSDEQBD5GGU
   options:
    - Standard: £45
+  colors: [Multicoloured]
   name: Cross Body Bag
   price: £45
   size: Bag 22cm x 21cm x 4cm, Handle 116cm
