--- a/_data/products.yml
+++ b/_data/products.yml
@@ -57,7 +57,7 @@
   colors: [Multicoloured, Blue, Gold, Green, Pastel Multicoloured, Red, Silver, Black & Red]
   name: Small Purse
   price: £10
-  size: 12cm x 9cm x 2.5cm§
+  size: 12cm x 9cm x 2.5cm
   closure: Zip
   img: purse-multi.jpg
   category: [purses]
