--- a/_data/products.yml
+++ b/_data/products.yml
@@ -20,7 +20,7 @@
   options:
    - Standard: £30
    - Barcode: £55
-  colors: [Multicoloured]
+  colors: []
   name: Large Clutch Bag
   price: £30
   size: 29.5cm x 16cm x 8cm
