--- a/_data/products.yml
+++ b/_data/products.yml
@@ -87,7 +87,7 @@
   paypal-id: DB6KG3E4QSSJL
   options:
    - Standard: £25
-  colors: [Multicoloured, Silver]
+  colors: [Red, Silver]
   name: Wash / Makeup Bag
   price: £25
   size: Bag 23cm x 14cm x 9cm
