--- a/_data/products.yml
+++ b/_data/products.yml
@@ -1,4 +1,5 @@
 - id: cross-body-bag
+  allow-purchase: false
   paypal-id: 27MSDEQBD5GGU
   options:
    - Standard: £45
@@ -16,6 +17,7 @@
     This item is made from over 200 crisp packets and takes around two weeks to create. It is shown here in the popular multicoloured style. If you have ideas for particular colours or themes just let me know, I'm always keen to hear suggestions.
 
 - id: medium-handbag
+  allow-purchase: true
   paypal-id: SVDCH84KSYH2Y
   options:
    - Barcode: £65
@@ -33,6 +35,7 @@
     Shown here in the traditional multicoloured style which offers the maximum variety for impromptu 'name the packet' sessions. Made from approximately 115 crisp packets it takes four to five days to create. If you would like a particular colour or theme just let me know, I'll be happy to hear what you have in mind.
 
 - id: large-clutch-bag
+  allow-purchase: true
   paypal-id: WSQVCMAT3656S
   options:
    - Barcode: £55
@@ -49,6 +52,7 @@
   description: 
 
 - id: small-clutch-bag
+  allow-purchase: true
   paypal-id: RFEFJH5QFDZA2
   options:
    - Standard: £25
@@ -66,6 +70,7 @@
   description:
 
 - id: small-purse
+  allow-purchase: true
   paypal-id: Q338LW728BFGA
   options:
    - Standard: £10
@@ -84,10 +89,11 @@
         If you would like larger or smaller size then I am happy to make the necessary adjustments. The purses are totally secure, so you need not worry about your stuff dropping out.
 
 - id: wash-bag
+  allow-purchase: true
   paypal-id: DB6KG3E4QSSJL
   options:
    - Standard: £25
-  colors: [Red, Silver]
+  colors: [Silver]
   name: Wash / Makeup Bag
   price: £25
   size: Bag 23cm x 14cm x 9cm
@@ -101,6 +107,7 @@
     It is shown here in the popular multicoloured style. If you have ideas for particular colours or themes just let me know, I'm always keen to hear suggestions.
 
 - id: bookmark
+  allow-purchase: true
   paypal-id: 6FLYMW8D575WC
   options:
    - Standard: £6
@@ -118,6 +125,7 @@
   description:
 
 - id: pencil-case
+  allow-purchase: true
   paypal-id: BGMMH2RN2VZ2J
   options:
    - Standard: £11
@@ -134,6 +142,7 @@
   description:
 
 - id: glasses-case
+  allow-purchase: true
   paypal-id: HRLN4WE5SFQUC
   options:
    - Standard: £8
@@ -152,6 +161,7 @@
         The standard size has been tested on a wide range of glasses to provide a sung fit. If your glasses are larger or more flamboyant than most then include the size when you get in touch. The cases can be made in any design and colour and all come with a free cleaning cloth.
 
 - id: keyring
+  allow-purchase: false
   paypal-id: 7996EYEQUZ6EC
   options:
    - Standard: £6
@@ -170,6 +180,7 @@
         Made from 5 individual crisp packets these are great conversation pieces. Their light weight and bold design makes them remarkably effective keyrings.
 
 - id: placemats-coasters
+  allow-purchase: true
   paypal-id: 4PAS98FGC9DXN
   options:
    - 4 Placemats: £20
